# aitum-stream-suite-slabs-tiktok

./: .gitignore  CMakeLists.txt  README.md  TRANSLATIONS.md  buildspec.json  installer.iss  resources.qrc
.github/scripts/: Package-Windows.ps1
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  cleanup.yaml
cmake/common/: bootstrap.cmake
cmake/macos/: helpers.cmake
cmake/macos/resources/: create-package.cmake.in
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini  pt-BR.ini  ru-RU.ini
src/: aitum-stream-suite.cpp  component-source.c
src/dialogs/: config-dialog.cpp  config-dialog.hpp  ffmpeg-output-dialog.cpp  ffmpeg-output-dialog.hpp  record-output-dialog.cpp  record-output-dialog.hpp  stream-output-dialog.cpp  stream-output-dialog.hpp
src/docks/: browser-dock.cpp  browser-dock.hpp  canvas-clone-dock.cpp  canvas-clone-dock.hpp  canvas-dock.cpp  canvas-dock.hpp  capture-dock.cpp  capture-dock.hpp  filters-dock.cpp  filters-dock.hpp  live-scenes-dock.cpp  live-scenes-dock.hpp  output-dock.cpp  output-dock.hpp  properties-dock.cpp  properties-dock.hpp  stats-dock.cpp  stats-dock.hpp  transform-dock.cpp  transform-dock.hpp
src/streamlabs/: api-client.cpp  api-client.hpp  cef-browser-dialog.cpp  cef-browser-dialog.hpp  oauth-callback-server.cpp  oauth-callback-server.hpp
src/utils/: event-filter.cpp  event-filter.hpp  file-download.c  file-download.h  icon.cpp  icon.hpp  obs-websocket.cpp
src/utils/widgets/: accessible-alignment-cell.cpp  accessible-alignment-cell.hpp  accessible-alignment-selector.cpp  accessible-alignment-selector.hpp  alignment-selector.cpp  alignment-selector.hpp  capture-widget.cpp  capture-widget.hpp  locked-checkbox.cpp  output-widget.cpp  output-widget.hpp  pixmap-label.cpp  pixmap-label.hpp  projector.cpp  projector.hpp  qt-display.cpp  source-tree.cpp  source-tree.hpp  switching-splitter.cpp  switching-splitter.hpp  visibility-checkbox.cpp  visibility-item-widget.cpp  visibility-item-widget.hpp
theme/: Aitum.obt  Aitum_Default.ovt
